# ai-agents-crash-course

./: .gitignore  README.md
aihero/: .gitignore
aihero/course/: .gitignore  README.md  aihero_course.ipynb  example.md  pyproject.toml
aihero/course/.ipynb_checkpoints/: aihero_course-checkpoint.ipynb
aihero/course/app/: app.py  ingest.py  logs.py  main.py  pyproject.toml  search_agent.py  search_tools.py
aihero/course/eval/: data_gen.py  evaluations.py
aihero/project/: .gitignore  README.md  aihero_project.ipynb  main.py  pyproject.toml
aihero/project/.ipynb_checkpoints/: aihero_project-checkpoint.ipynb  ingest_ai-engineering-toolkit-checkpoint.ipynb
aihero/project/app/: README.md  __init__.py  app.py  ingest.py  logs.py  main.py  pyproject.toml  search_agent.py  search_tools.py  streamlit_app.py
aihero/project/eval/: data_gen.ipynb  evaluations.ipynb
